# embedded-systems-assigment-2-ros

./: .gitmodules  CMakeLists.txt  README.md  test_dma  test_dma.cpp
include/: axi_dma_controller.h  axidma.h  reserved_mem.hpp  xexample_hw.h
lib/axidma/: CMakeLists.txt
lib/axidma/src/: axidma.cpp
lib/example_driver/: CMakeLists.txt
lib/example_driver/data/: example.mdd  example.tcl
lib/example_driver/src/: Makefile  xexample.c  xexample.h  xexample_linux.c  xexample_sinit.c
src/: test_dma-own-driver.cpp  test_dma.cpp  test_dma_r.cpp
